--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,5 +66,9 @@ dependencies {
     // ConstraintLayout
     implementation "org.jetbrains.anko:anko-constraint-layout:$anko_version"
 
+    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:0.15'
+
     implementation "com.android.support:recyclerview-v7:26.1.0"
+
+    implementation 'com.squareup.okhttp3:okhttp:3.11.0'
 }
