--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.demos.yxn.lifecircle">
 
     <application
@@ -9,7 +10,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme"
+        tools:ignore="GoogleAppIndexingWarning">
         <activity
             android:name=".Activity.MainActivity"
             android:configChanges="orientation|screenSize">
@@ -17,27 +19,27 @@
         <activity
             android:name=".Activity.BActivity"
             android:configChanges="orientation|screenSize"
-            android:launchMode="singleInstance" />
+            android:launchMode="singleInstance"/>
         <activity
             android:name=".Activity.AActivity"
-            android:launchMode="singleTask"></activity>
+            android:launchMode="singleTask"/>
         <activity
             android:name=".Activity.CActivity"
             android:launchMode="singleTop"
-            android:theme="@style/Theme.AppCompat.Dialog" />
+            android:theme="@style/Theme.AppCompat.Dialog"/>
         <activity
             android:name=".Activity.DActivity"
-            android:launchMode="standard" />
+            android:launchMode="standard"/>
         <activity
             android:name=".RecyclereViewDemo.RcviewActivity"
-            android:launchMode="singleTask"></activity>
-        <activity android:name=".Activity.NdkDemoActivity" />
-        <activity android:name=".Activity.ToolbarActivity" />
+            android:launchMode="singleTask"/>
+        <activity android:name=".Activity.NdkDemoActivity"/>
+        <activity android:name=".Activity.ToolbarActivity"/>
         <activity android:name=".kotlin.Main3Activity">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.intent.action.MAIN"/>
 
-                <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
     </application>
