--- a/app/build.gradle
+++ b/app/build.gradle
@@ -66,5 +66,9 @@ dependencies {
     // ConstraintLayout
     implementation "org.jetbrains.anko:anko-constraint-layout:$anko_version"
 
-    implementation "com.android.support:recyclerview-v7:26.1.0"
+  implementation "com.android.support:recyclerview-v7:26.1.0"
+
+  //bilibili ijkplayer
+  implementation 'tv.danmaku.ijk.media:ijkplayer-java:0.8.8'
+  implementation 'tv.danmaku.ijk.media:ijkplayer-armv7a:0.8.8'
 }
