--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,8 +12,15 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".ipc.IPCActivity">
+        <!--开启页面-->
+        <activity android:name=".Activity.OpenActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
 
+                <category android:name="android.intent.category.LAUNCHER"/>
+            </intent-filter>
+        </activity>
+        <activity android:name=".ipc.IPCActivity">
         </activity>
 
         <service
@@ -22,7 +29,6 @@
         </service>
 
         <activity android:name=".webview.WebViewActivity">
-
         </activity>
         <activity
             android:name=".Activity.MainActivity"
@@ -50,13 +56,7 @@
         <activity android:name=".Activity.ToolbarActivity"/>
         <activity android:name=".kotlin.Main3Activity">
         </activity>
-        <activity android:name=".ijkdemo.PlayerTest">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-
-                <category android:name="android.intent.category.LAUNCHER"/>
-            </intent-filter>
-        </activity>
+        <activity android:name=".ijkdemo.PlayerTest"/>
     </application>
 
 </manifest>
