--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
     package="com.demos.yxn.lifecircle">
 
     <application
-        android:name=".application.MyApp"
+        android:name=".liftcycle.MyApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -12,8 +12,10 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <!--开启页面-->
-        <activity android:name=".Activity.OpenActivity">
+        <activity android:name=".views.TouchableBallActivity">
+        </activity>
+        <!-- 开启页面 -->
+        <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
@@ -31,32 +33,31 @@
         <activity android:name=".webview.WebViewActivity">
         </activity>
         <activity
-            android:name=".Activity.MainActivity"
+            android:name=".liftcycle.FirstActivity"
             android:configChanges="orientation|screenSize">
         </activity>
         <activity
-            android:name=".Activity.BActivity"
+            android:name=".liftcycle.BActivity"
             android:configChanges="orientation|screenSize"
             android:launchMode="singleInstance"/>
         <activity
-            android:name=".Activity.AActivity"
+            android:name=".liftcycle.AActivity"
             android:launchMode="singleTask"/>
         <activity
-            android:name=".Activity.CActivity"
+            android:name=".liftcycle.CActivity"
             android:launchMode="singleTop"
             android:theme="@style/Theme.AppCompat.Dialog"/>
         <activity
-            android:name=".Activity.DActivity"
+            android:name=".liftcycle.DActivity"
             android:launchMode="standard"/>
         <activity
             android:name=".RecyclereViewDemo.RcviewActivity"
             android:launchMode="singleTask"/>
-        <activity android:name=".Activity.NdkDemoActivity">
+        <activity android:name=".ndk.NdkDemoActivity">
         </activity>
-        <activity android:name=".Activity.ToolbarActivity"/>
-        <activity android:name=".kotlin.Main3Activity">
+        <activity android:name=".kotlinsyntax.KotlinSyntaxActivity">
         </activity>
-        <activity android:name=".ijkdemo.PlayerTest"/>
+        <activity android:name=".ijk.PlayerTest"/>
     </application>
 
 </manifest>
