--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,31 +5,29 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
 android {
-    compileSdkVersion 26
-    defaultConfig {
-        applicationId "com.demos.yxn.lifecircle"
-        minSdkVersion 19
-        targetSdkVersion 26
-        versionCode 1
-        versionName "1.0"
-        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-        ndk {
-            abiFilters 'armeabi-v7a', 'arm64-v8a', 'x86'
-
-
-        }
+  compileSdkVersion 26
+  defaultConfig {
+    applicationId "com.demos.yxn.lifecircle"
+    minSdkVersion 19
+    targetSdkVersion 26
+    versionCode 1
+    versionName "1.0"
+    testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+    ndk {
+      abiFilters 'armeabi-v7a', 'arm64-v8a', 'x86'
     }
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-        }
+  }
+  buildTypes {
+    release {
+      minifyEnabled false
+      proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
     }
-    sourceSets {
-        main {
-            jniLibs.srcDirs = ['src/main/libs', 'src/main/jniLibs/']
-        }
+  }
+  sourceSets {
+    main {
+      jniLibs.srcDirs = ['src/main/libs', 'src/main/jniLibs/']
     }
+  }
 
   packagingOptions {
     doNotStrip '*/mips/*.so'
@@ -47,24 +45,24 @@ configurations.all {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
-    implementation 'com.android.support:appcompat-v7:26.1.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.0'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    // Anko Commons
-    implementation "org.jetbrains.anko:anko-commons:$anko_version"
-    // Anko Layouts
-    implementation "org.jetbrains.anko:anko-sdk25:$anko_version"
-    // sdk15, sdk19, sdk21, sdk23 are also available
-    implementation "org.jetbrains.anko:anko-appcompat-v7:$anko_version"
+  implementation fileTree(dir: 'libs', include: ['*.jar', '*.so'])
+  implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+  implementation 'com.android.support:appcompat-v7:26.1.0'
+  implementation 'com.android.support.constraint:constraint-layout:1.1.0'
+  testImplementation 'junit:junit:4.12'
+  androidTestImplementation 'com.android.support.test:runner:1.0.2'
+  androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+  // Anko Commons
+  implementation "org.jetbrains.anko:anko-commons:$anko_version"
+  // Anko Layouts
+  implementation "org.jetbrains.anko:anko-sdk25:$anko_version"
+  // sdk15, sdk19, sdk21, sdk23 are also available
+  implementation "org.jetbrains.anko:anko-appcompat-v7:$anko_version"
 
-    // Appcompat-v7 (Anko Layouts)
-    implementation "org.jetbrains.anko:anko-coroutines:$anko_version"
-    // ConstraintLayout
-    implementation "org.jetbrains.anko:anko-constraint-layout:$anko_version"
+  // Appcompat-v7 (Anko Layouts)
+  implementation "org.jetbrains.anko:anko-coroutines:$anko_version"
+  // ConstraintLayout
+  implementation "org.jetbrains.anko:anko-constraint-layout:$anko_version"
 
   implementation "com.android.support:recyclerview-v7:26.1.0"
 
