--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ buildscript {
     ext.kotlin_version = '1.2.40'
     ext.anko_version='0.10.5'
     repositories {
+	maven { url 'http://maven.aliyun.com/nexus/content/groups/public' }
         google()
         jcenter()
     }
@@ -19,6 +20,7 @@ buildscript {
 
 allprojects {
     repositories {
+	maven { url 'http://maven.aliyun.com/nexus/content/groups/public' }
         google()
         jcenter()
     }
