--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ apply plugin: 'kotlin-android-extensions'
 android {
   compileSdkVersion 26
   defaultConfig {
-    applicationId "com.demos.yxn.lifecircle"
+    applicationId "com.demos.kotlin"
     minSdkVersion 19
     targetSdkVersion 26
     versionCode 1
@@ -69,4 +69,14 @@ dependencies {
   //bilibili ijkplayer
   implementation 'tv.danmaku.ijk.media:ijkplayer-java:0.8.8'
   implementation 'tv.danmaku.ijk.media:ijkplayer-armv7a:0.8.8'
+
+  implementation 'io.reactivex:rxjava:1.1.6'
+  implementation 'io.reactivex:rxandroid:1.2.1'
+  implementation 'com.google.code.gson:gson:2.4'
+  implementation 'com.squareup.retrofit2:retrofit:2.0.2'
+  implementation 'com.squareup.retrofit2:converter-gson:2.0.2'
+  implementation 'com.squareup.retrofit2:adapter-rxjava:2.0.2'
+  implementation 'com.squareup.okhttp3:okhttp:3.2.0'
+  implementation 'com.squareup.okhttp3:logging-interceptor:3.0.1'
+  implementation 'com.github.bumptech.glide:glide:4.3.1'
 }
