--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,78 +5,68 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 
 android {
-  compileSdkVersion 26
-  defaultConfig {
-    applicationId "com.demos.kotlin"
-    minSdkVersion 19
-    targetSdkVersion 26
-    versionCode 1
-    versionName "1.0"
-    testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-    ndk {
-      abiFilters 'armeabi-v7a', 'arm64-v8a', 'x86'
+    compileSdkVersion 26
+    defaultConfig {
+        applicationId "com.demos.yxn.lifecircle"
+        minSdkVersion 19
+        targetSdkVersion 26
+        versionCode 1
+        versionName "1.0"
+        testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+        ndk {
+            abiFilters 'armeabi-v7a', 'arm64-v8a', 'x86'
+        }
     }
-  }
-  buildTypes {
-    release {
-      minifyEnabled false
-      proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+    buildTypes {
+        release {
+            minifyEnabled false
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+        }
     }
-  }
-  sourceSets {
-    main {
-      jniLibs.srcDirs = ['src/main/libs', 'src/main/jniLibs/']
+    sourceSets {
+        main {
+            jniLibs.srcDirs = ['src/main/libs', 'src/main/jniLibs/']
+        }
     }
-  }
 
-  packagingOptions {
-    doNotStrip '*/mips/*.so'
-    doNotStrip '*/mips64/*.so'
-  }
-
-  externalNativeBuild {
-    ndkBuild {
-      path "src/main/jni/Android.mk"
+    packagingOptions {
+        doNotStrip '*/mips/*.so'
+        doNotStrip '*/mips64/*.so'
     }
-  }
+
+    externalNativeBuild {
+        ndkBuild {
+            path "src/main/jni/Android.mk"
+        }
+    }
 }
 configurations.all {
-  resolutionStrategy.force 'com.android.support:support-annotations:26.1.0'
+    resolutionStrategy.force 'com.android.support:support-annotations:26.1.0'
 }
 
 dependencies {
-  implementation fileTree(dir: 'libs', include: ['*.jar', '*.so'])
-  implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-  implementation 'com.android.support:appcompat-v7:26.1.0'
-  implementation 'com.android.support.constraint:constraint-layout:1.1.0'
-  testImplementation 'junit:junit:4.12'
-  androidTestImplementation 'com.android.support.test:runner:1.0.2'
-  androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-  // Anko Commons
-  implementation "org.jetbrains.anko:anko-commons:$anko_version"
-  // Anko Layouts
-  implementation "org.jetbrains.anko:anko-sdk25:$anko_version"
-  // sdk15, sdk19, sdk21, sdk23 are also available
-  implementation "org.jetbrains.anko:anko-appcompat-v7:$anko_version"
+    implementation fileTree(dir: 'libs', include: ['*.jar', '*.so'])
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation 'com.android.support:appcompat-v7:26.1.0'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.0'
+    testImplementation 'junit:junit:4.12'
+    androidTestImplementation 'com.android.support.test:runner:1.0.2'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    // Anko Commons
+    implementation "org.jetbrains.anko:anko-commons:$anko_version"
+    // Anko Layouts
+    implementation "org.jetbrains.anko:anko-sdk25:$anko_version"
+    // sdk15, sdk19, sdk21, sdk23 are also available
+    implementation "org.jetbrains.anko:anko-appcompat-v7:$anko_version"
 
-  // Appcompat-v7 (Anko Layouts)
-  implementation "org.jetbrains.anko:anko-coroutines:$anko_version"
-  // ConstraintLayout
-  implementation "org.jetbrains.anko:anko-constraint-layout:$anko_version"
+    // Appcompat-v7 (Anko Layouts)
+    implementation "org.jetbrains.anko:anko-coroutines:$anko_version"
+    // ConstraintLayout
+    implementation "org.jetbrains.anko:anko-constraint-layout:$anko_version"
 
-  implementation "com.android.support:recyclerview-v7:26.1.0"
+    implementation "com.android.support:recyclerview-v7:26.1.0"
 
-  //bilibili ijkplayer
-  implementation 'tv.danmaku.ijk.media:ijkplayer-java:0.8.8'
-  implementation 'tv.danmaku.ijk.media:ijkplayer-armv7a:0.8.8'
-
-  implementation 'io.reactivex:rxjava:1.1.6'
-  implementation 'io.reactivex:rxandroid:1.2.1'
-  implementation 'com.google.code.gson:gson:2.4'
-  implementation 'com.squareup.retrofit2:retrofit:2.0.2'
-  implementation 'com.squareup.retrofit2:converter-gson:2.0.2'
-  implementation 'com.squareup.retrofit2:adapter-rxjava:2.0.2'
-  implementation 'com.squareup.okhttp3:okhttp:3.2.0'
-  implementation 'com.squareup.okhttp3:logging-interceptor:3.0.1'
-  implementation 'com.github.bumptech.glide:glide:4.3.1'
+    //bilibili ijkplayer
+    implementation 'tv.danmaku.ijk.media:ijkplayer-java:0.8.8'
+    implementation 'tv.danmaku.ijk.media:ijkplayer-armv7a:0.8.8'
 }
