--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.demos.kotlin">
 
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
     <application
         android:name=".lifecycle.MyApp"
         android:allowBackup="true"
@@ -12,8 +16,10 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".views.DrawerActivity"></activity>
-        <activity android:name=".views.TouchableBallActivity"></activity> <!-- 开启页面 -->
+        <activity android:name=".CameraActivity"></activity>
+        <activity android:name=".WaterMarkActivity" />
+        <activity android:name=".views.DrawerActivity" />
+        <activity android:name=".TouchableBallActivity" /> <!-- 开启页面 -->
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -21,10 +27,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".webview.WebViewActivity"></activity>
+        <activity android:name=".WebViewActivity" />
         <activity
             android:name=".lifecycle.FirstActivity"
-            android:configChanges="orientation|screenSize"></activity>
+            android:configChanges="orientation|screenSize" />
         <activity
             android:name=".lifecycle.BActivity"
             android:configChanges="orientation|screenSize"
@@ -39,9 +45,10 @@
         <activity
             android:name=".lifecycle.DActivity"
             android:launchMode="standard" />
-        <activity android:name=".ndk.NdkDemoActivity"></activity>
-        <activity android:name=".kotlinsyntax.KotlinSyntaxActivity"></activity>
+        <activity android:name=".NdkDemoActivity" />
+        <activity android:name=".kotlinsyntax.KotlinSyntaxActivity" />
         <activity android:name=".ijk.PlayerTest" />
+        <activity android:name=".PictureActivity" />
     </application>
 
 </manifest>
