--- a/app/build.gradle
+++ b/app/build.gradle
@@ -90,4 +90,7 @@ dependencies {
     implementation 'com.hyman:flowlayout-lib:1.1.2'
     implementation "com.github.bumptech.glide:glide:4.8.0"
 
+    //weChat camera
+    implementation 'cjt.library.wheel:camera:1.1.9'
+
 }
