--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,50 +15,52 @@
     <uses-permission android:name="android.permission.WRITE_SETTINGS" />
 
     <application
-        android:name=".lifecycle.MyApp"
+        android:name=".activity.lifecycle.MyApp"
         android:allowBackup="true"
-        android:icon="@drawable/icon"
+        android:icon="@mipmap/icon"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".WidgetsActivity"></activity>
-        <activity android:name=".WeChatMainActivity" />
-        <activity android:name=".CameraActivity" />
-        <activity android:name=".WaterMarkActivity" />
-        <activity android:name=".views.DrawerActivity" />
-        <activity android:name=".TouchableBallActivity" /> <!-- 开启页面 -->
-        <activity android:name=".MainActivity">
+        <activity android:name=".activity.TabScrollViewActivity"></activity>
+        <activity android:name=".activity.LoginActivity" />
+        <activity android:name=".activity.WidgetsActivity" />
+        <activity android:name=".activity.WeChatMainActivity" />
+        <activity android:name=".activity.CameraActivity" />
+        <activity android:name=".activity.WaterMarkActivity" />
+        <activity android:name=".activity.DrawerActivity" />
+        <activity android:name=".activity.TouchableBallActivity" /> <!-- 开启页面 -->
+        <activity android:name=".activity.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".WebViewActivity" />
+        <activity android:name=".activity.WebViewActivity" />
         <activity
-            android:name=".lifecycle.FirstActivity"
+            android:name=".activity.lifecycle.FirstActivity"
             android:configChanges="orientation|screenSize" />
         <activity
-            android:name=".lifecycle.BActivity"
+            android:name=".activity.lifecycle.BActivity"
             android:configChanges="orientation|screenSize"
             android:launchMode="singleInstance" />
         <activity
-            android:name=".lifecycle.AActivity"
+            android:name=".activity.lifecycle.AActivity"
             android:launchMode="singleTask" />
         <activity
-            android:name=".lifecycle.CActivity"
+            android:name=".activity.lifecycle.CActivity"
             android:launchMode="singleTop"
             android:theme="@style/Theme.AppCompat.Dialog" />
         <activity
-            android:name=".lifecycle.DActivity"
+            android:name=".activity.lifecycle.DActivity"
             android:launchMode="standard" />
-        <activity android:name=".NdkDemoActivity" />
-        <activity android:name=".kotlinsyntax.KotlinSyntaxActivity" />
-        <activity android:name=".ijk.PlayerTest" />
-        <activity android:name=".PictureActivity" />
-        <activity android:name=".WeChatCameraActivity" /> <!-- 必须加 -->
+        <activity android:name=".activity.NdkDemoActivity" />
+        <activity android:name=".algorithm.KotlinSyntaxActivity" />
+        <activity android:name=".ijk.PlayerActivity" />
+        <activity android:name=".activity.PictureActivity" />
+        <activity android:name=".activity.WeChatCameraActivity" /> <!-- 必须加 -->
         <provider
             android:name="androidx.core.content.FileProvider"
             android:authorities="com.demos.kotlin.fileprovider"
