--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -60,7 +60,8 @@
         <activity android:name=".algorithm.KotlinSyntaxActivity" />
         <activity android:name=".ijk.PlayerActivity" />
         <activity android:name=".activity.PictureActivity" />
-        <activity android:name=".activity.WeChatCameraActivity" /> <!-- 必须加 -->
+        <activity android:name=".activity.WeChatCameraActivity" />
+        <activity android:name=".activity.CommodityDetailActivity" /> <!-- 必须加 -->
         <provider
             android:name="androidx.core.content.FileProvider"
             android:authorities="com.demos.kotlin.fileprovider"
