Apply update module in app module.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,8 +42,29 @@ android {
         }
     }
 }
-configurations.all {
+/*configurations.all {
     resolutionStrategy.force 'com.android.support:support-annotations:26.1.0'
+}*/
+configurations.all {
+    resolutionStrategy {
+        resolutionStrategy.eachDependency { details ->
+            if (details.requested.group == 'androidx.core') {
+                details.useVersion "1.0.1"
+            }
+            if (details.requested.group == 'androidx.lifecycle') {
+                details.useVersion "2.0.0"
+            }
+            if (details.requested.group == 'androidx.versionedparcelable') {
+                details.useVersion "1.0.0"
+            }
+            if (details.requested.group == 'androidx.fragment') {
+                details.useVersion "1.0.0"
+            }
+            if (details.requested.group == 'androidx.appcompat') {
+                details.useVersion "1.0.1"
+            }
+        }
+    }
 }
 
 dependencies {
@@ -79,7 +100,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.0.2'
     implementation 'com.squareup.retrofit2:converter-gson:2.0.2'
     implementation 'com.squareup.retrofit2:adapter-rxjava:2.0.2'
-    implementation 'com.squareup.okhttp3:okhttp:3.2.0'
+    implementation 'com.squareup.okhttp3:okhttp:3.12.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.0.1'
     implementation 'androidx.multidex:multidex:2.0.0'
     implementation 'androidx.appcompat:appcompat:1.0.0'
@@ -92,5 +113,6 @@ dependencies {
 
     //weChat camera
     implementation 'cjt.library.wheel:camera:1.1.9'
+    implementation project(path: ':app_update')
 
 }
