--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -64,6 +64,8 @@
         <activity android:name=".activity.WeChatCameraActivity" />
         <activity android:name=".activity.CommodityDetailActivity" /> <!-- 必须加 -->
         <activity android:name=".activity.UpdateAppActivity" />
+        <activity android:name=".activity.JsonParseActivity" />
+
         <provider
             android:name="androidx.core.content.FileProvider"
             android:authorities="com.demos.kotlin.fileprovider"
