--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,8 @@
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning"
         tools:replace="android:icon">
-        <activity android:name=".activity.TabScrollViewActivity"></activity>
+        <activity android:name=".activity.BannerActivity"></activity>
+        <activity android:name=".activity.TabScrollViewActivity" />
         <activity android:name=".activity.LoginActivity" />
         <activity android:name=".activity.WidgetsActivity" />
         <activity android:name=".activity.WeChatMainActivity" />
