--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,11 @@
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning"
         tools:replace="android:icon">
-        <activity android:name=".activity.BannerActivity"></activity>
+        <activity android:name=".activity.CustomTabHostActivity"></activity>
+        <activity
+            android:name=".ui.login.LoginActivitySystem"
+            android:label="@string/title_activity_login_system" />
+        <activity android:name=".activity.BannerActivity" />
         <activity android:name=".activity.TabScrollViewActivity" />
         <activity android:name=".activity.LoginActivity" />
         <activity android:name=".activity.WidgetsActivity" />
@@ -66,6 +70,7 @@
         <activity android:name=".activity.CommodityDetailActivity" /> <!-- 必须加 -->
         <activity android:name=".activity.UpdateAppActivity" />
         <activity android:name=".activity.JsonParseActivity" />
+        <activity android:name=".activity.ui.login.LoginSystemActivity" />
 
         <provider
             android:name="androidx.core.content.FileProvider"
