--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,7 @@
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning"
         tools:replace="android:icon">
-        <activity android:name=".activity.CustomTabHostActivity"></activity>
+        <activity android:name=".activity.CustomTabLayoutActivity"></activity>
         <activity
             android:name=".ui.login.LoginActivitySystem"
             android:label="@string/title_activity_login_system" />
