--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,8 @@
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning"
         tools:replace="android:icon">
-        <activity android:name=".activity.ChromeTabActivity"></activity>
+        <activity android:name=".activity.CardViewPagerActivity"></activity>
+        <activity android:name=".activity.ChromeTabActivity" />
         <activity
             android:name=".ui.login.LoginActivitySystem"
             android:label="@string/title_activity_login_system" />
