--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,17 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     package="com.demos.kotlin">
 
-    <uses-permission android:name="android.permission.CAMERA" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.FLASHLIGHT" />
-
-    <uses-feature android:name="android.hardware.camera" />
-    <uses-feature android:name="android.hardware.camera.autofocus" />
-
-    <uses-permission android:name="android.permission.RECORD_AUDIO" />
-    <uses-permission android:name="android.permission.WRITE_SETTINGS" />
-
     <application
         android:name=".activity.lifecycle.MyApp"
         android:allowBackup="true"
@@ -21,9 +10,11 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:usesCleartextTraffic="true"
         android:theme="@style/AppTheme"
         tools:ignore="GoogleAppIndexingWarning"
         tools:replace="android:icon">
+
         <activity android:name=".activity.charts.BaseChartActivity"></activity>
         <activity android:name=".activity.PopwindowActivity" />
         <activity android:name=".activity.CustomMapActivity" />
@@ -75,7 +66,6 @@
         <activity android:name=".activity.CommodityDetailActivity" /> <!-- 必须加 -->
         <activity android:name=".activity.UpdateAppActivity" />
         <activity android:name=".activity.JsonParseActivity" />
-        <activity android:name=".activity.ui.login.LoginSystemActivity" />
         <activity android:name=".activity.charts.BarChartActivityMultiDataset" />
         <activity android:name=".activity.PieChartActivity" />
         <activity android:name=".activity.charts.BarChartActivity" />
@@ -85,6 +75,13 @@
         <activity android:name=".activity.charts.StackedBarActivity" />
         <activity android:name=".activity.charts.CandleStickChartActivity" />
         <activity android:name=".activity.SeekBarActivity" />
+        <activity android:name=".activity.AddressChooseActivity" />
+        <activity android:name=".activity.ImagePickerActivity" />
+        <activity android:name=".utils.imagepicker.MultiImageSelectorActivity" />
+
+        <meta-data
+            android:name="com.baidu.lbsapi.API_KEY"
+            android:value="3FN4ZMSTp0nlpOBuSHMtEAGnNDxcmYDi" />
 
         <provider
             android:name="androidx.core.content.FileProvider"
@@ -98,5 +95,36 @@
                 android:resource="@xml/file_provider_paths" />
         </provider>
     </application>
+
+    <uses-feature android:name="android.hardware.camera.autofocus" />
+    <uses-feature android:name="android.hardware.camera" />
+
+    <uses-permission android:name="android.permission.FLASHLIGHT" />
+
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
+    <uses-permission android:name="android.permission.WRITE_SETTINGS" />
+
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
+    <!-- 这个权限用于进行网络定位 -->
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <!-- 这个权限用于访问GPS定位 -->
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <!-- 用于访问wifi网络信息，wifi信息会用于进行网络定位 -->
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <!-- 获取网络状态，根据网络状态切换进行数据请求网络转换 -->
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <!-- 写外置存储。如果开发者使用了离线地图，并且数据写在外置存储区域，则需要申请该权限 -->
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <!-- 读取外置存储。如果开发者使用了so动态加载功能并且把so文件放在了外置存储区域，则需要申请该权限，否则不需要 -->
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <!-- 访问网络，进行地图相关业务数据请求，包括地图数据，路线规划，POI检索等 -->
+    <uses-permission android:name="android.permission.INTERNET" />
+    <!-- 调用相机，用于实现扫描二维码，预览个性化地图编辑器生成的个性化地图样式（开发者实际开发中地图SDK不需要该权限）-->
+    <uses-permission android:name="android.permission.CAMERA" />
+
 
 </manifest>
