--- a/build.gradle
+++ b/build.gradle
@@ -1,16 +1,16 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.2.51'
-    ext.anko_version = '0.10.5'
+    ext.kotlin_version = '1.4.20'
+    ext.anko_version = '0.10.8'
     repositories {
-        maven { url 'http://maven.aliyun.com/nexus/content/groups/public' }
+//        maven { url 'http://maven.aliyun.com/nexus/content/groups/public' }
         google()
         jcenter()
         maven { url 'https://jitpack.io' }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.2.0'
+        classpath 'com.android.tools.build:gradle:3.6.3'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
 
@@ -21,7 +21,7 @@ buildscript {
 
 allprojects {
     repositories {
-        maven { url 'http://maven.aliyun.com/nexus/content/groups/public' }
+//        maven { url 'http://maven.aliyun.com/nexus/content/groups/public' }
         google()
         jcenter()
         maven { url 'https://jitpack.io' }
