--- a/app_update/build.gradle
+++ b/app_update/build.gradle
@@ -1,11 +1,14 @@
 apply plugin: 'com.android.library'
 
+apply plugin: 'kotlin-android'
+apply plugin: 'kotlin-kapt'
+
 android {
     compileSdkVersion 28
 
 
     defaultConfig {
-        minSdkVersion 19
+        minSdkVersion 21
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
@@ -21,6 +24,15 @@ android {
         }
     }
 
+    viewBinding {
+        enabled = true
+    }
+
+
+    kapt {
+        generateStubs = true
+    }
+
 }
 
 dependencies {
@@ -31,6 +43,8 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+
+    kapt "com.android.databinding:compiler:3.6.3"
 
     implementation 'com.squareup.okhttp3:okhttp:3.12.0'
 }
